--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>MySite</title>
+    <title>Fullstack Development Services | WebKey</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="WebKey offers professional fullstack development services, delivering robust and scalable solutions to businesses worldwide. Contact us for a free consultation."
+    />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://www.getthewebkey.com" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
   </head>
   <body>
     <app-root></app-root>
