--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
     <link rel="canonical" href="https://www.getthewebkey.com" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <script
+      src="https://kit.fontawesome.com/7ba5361fc6.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <app-root></app-root>
